attempt to fix scrolling issue on iphone

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ html, body {
   overflow-x: hidden;
   overflow-y: scroll;
 }
+*{
+  overflow-y: scroll;
+  --webkit-overflow-scrolling: touch;
+}
 *:focus
 {
   outline: 0;
